# ask-my-resume

./: .env.example  .gitignore  API_README.md  DEPLOYMENT_SUCCESS.md  Dockerfile  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
content/ai-thinking/: ai-safety-perspective.md
content/education/: cornell-tech.md  dartmouth.md
content/experience/: meta-overview.md  meta-projects-detail.md
content/narrative/: career-arc.md  why-ai-product-engineering.md  why-grad-school.md
content/practical/: basics.md
content/projects/: budget-buddy.md
content/vision/: why-this-matters.md
content/working-style/: working-style.md
docs/: phase_2_infra_build.md  phase_3_ingestion_complete.md  phase_5_complete.md  project-plan.md
docs/frontend/: v1_plan.md  v1_prd.md
docs/journal/: 2026-02-13-phase2-implementation.md  2026-02-13-phase4-rag-api.md  journal_template.md
eval/: test-queries.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/[[...variant]]/: page.tsx
frontend/components/chat/: ChatHeader.tsx  ChatInput.tsx  (+4 more)
frontend/lib/: constants.ts  hooks.ts  types.ts
prompts/: system-prompt-v1.md
scripts/: README.md  ingest_content.py  query_example.py  run_api.py  test_api.py  test_connection.py  test_similarity_search.py  verify_setup.py
src/: config.py
src/alembic/: env.py
src/api/: main.py
src/database/: __init__.py  base.py  models.py  session.py
src/generation/: __init__.py  llm.py
src/retrieval/: __init__.py  search.py
(+16 files in other folders)
